src/test/rustdoc-ui/error-in-impl-trait/async.stderr
error[E0433]: failed to resolve: could not resolve path `error::_in::async_fn`
  --> $DIR/async.rs:8:5
   |
LL |     error::_in::async_fn()
   |     ^^^^^^^^^^^^^^^^^^^^ could not resolve path `error::_in::async_fn`
   |
   = note: this error was originally ignored because you are running `rustdoc`
   = note: try running again with `rustc` or `cargo check` and you may get a more detailed error

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
